@@ -34,7 +34,7 @@ local DRData = LibStub("DRData-1.0", true)
 TELLMEWHEN_VERSION = "4.5.0"
 TELLMEWHEN_VERSION_MINOR = strmatch(" @project-version@", " r%d+") or ""
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 45009 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
+TELLMEWHEN_VERSIONNUMBER = 45010 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
 if TELLMEWHEN_VERSIONNUMBER > 46000 or TELLMEWHEN_VERSIONNUMBER < 45000 then return error("YOU SCREWED UP THE VERSION NUMBER OR DIDNT CHANGE THE SAFETY LIMITS") end -- safety check because i accidentally made the version number 414069 once
 
 TELLMEWHEN_MAXGROUPS = 1 	--this is a default, used by SetTheory (addon), so dont rename
@@ -2889,7 +2889,6 @@ function TMW:Icon_Update(icon)
 	local ct = icon.countText
 	local btf = group.Fonts.Bind
 	local bt = icon.bindText
-	if not ctf then print("LBCODING", iconID, groupID) LBCode(CopyTable(db.profile)) end
 	ct:SetFont(LSM:Fetch("font", ctf.Name), ctf.Size, ctf.Outline)
 	bt:SetFont(LSM:Fetch("font", btf.Name), btf.Size, btf.Outline)
 	bt:SetText(icon.BindText)
