@@ -63,7 +63,6 @@
 					</Anchors>
 				</FontString>
 				<FontString name="$parentHotKey" parentKey="bindText" inherits="NumberFontNormalSmallGray" justifyH="RIGHT">
-					<Size x="30" y="10"/>
 					<Anchors>
 						<Anchor point="TOPLEFT" relativeTo="$parent" relativePoint="TOPLEFT" x="-2" y="-2"/>
 					</Anchors>
